--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@ body {
     <button type="button" class="mode-button" onclick="location.href='T2.html'">
       🤖 트링키와 하기 / Play with Trinky
     </button>
+      <button type="button" class="mode-button" onclick="location.href='T3.html'">
+      🤖 졸린 트링키와 하기 / Play with Sleepy Trinky
+    </button>
+  
   </div>
 </form>
 
@@ -287,7 +291,7 @@ body {
 
 <p class="credit">
   Created by: Soosoo Han<br/>
-  AI Assistant: ChatGPT, Jaechi, Claude<br/>
+  Assistant: ChatGPT, Jaechi, Claude, Nature Lee<br/>
   © 2025 한수수. All rights reserved.
 </p>
 
