--- a/index.html
+++ b/index.html
@@ -290,11 +290,20 @@ body {
 </div>
 
 <p class="credit">
+
+* 기획·개발 : 한수수<br/>
+* 개발 보조 : 챗GPT<br/>
+* 코딩 도움 : 클라우드<br/>
+* 디자인 도움: 네이처 리<br/>
+ⓒ 2025 한수수. 이 게임의 모든 권리는 제작자인 한수수에게 있습니다. 무단 복제, 배포, 2차 창작을 금합니다.<br/>
+* Created and Developed by Soosoo Han<br/>
+* Development Assistant: ChatGPT<br/>
+* Coding Support: Cloud<br/>
+* Design Support: Nature Lee<br/>
   Created by: Soosoo Han<br/>
   Assistant: ChatGPT, Jaechi, Claude, Nature Lee<br/>
-  © 2025 한수수. All rights reserved.
+  © 2025 Soosoo Han. All rights reserved.
 </p>
-
 
   </div>
 
