--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   padding: 40px 30px;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
   text-align: center;
-  max-width: 700px;
+  max-width: 390px;
   width: 100%;
   backdrop-filter: blur(10px);
   margin: 20px auto;
@@ -215,12 +215,23 @@ body {
   <div>
     • 두 사람이 번갈아 선을 그어요<br/>
     • 삼각형을 완성하면 점수를 얻고 한 번 더!<br/>
-    • 가장 많은 삼각형을 만든 사람이 이겨요!<br/><br/>
+    • 더 많은 삼각형을 만든 사람이 이겨요!<br/>
+    • 자기 턴이 되었을 때 선을 그리세요<br/>
+    • 두 사람이 함께 하려면 아래 창에 이름을 쓰고 '둘이서 하기' 버튼을 누르세요<br/>
+    • 혼자 할 경우, 트링키와 대결하게 됩니다<br/>
+    • 졸린 트링키와 게임할 때는 사용자가 조금 유리해요<br/>
+    • 트링키와 대결하려면 '트링키와 하기' 버튼을 누르세요<br/><br/>
     • Two players take turns drawing lines<br/>
     • Complete a triangle to score and take another turn<br/>
-    • Player with the most triangles wins!
+    • The player who draws more triangles wins<br/>
+    • When it’s your turn, draw a line<br/>
+    • To play together, enter both names below and press '2 Player Mode'<br/>
+    • If playing alone, you'll compete against Trinky<br/>
+    • When playing against Sleepy Trinky, the player has a slight advantage<br/>
+    • To play against Trinky, press the 'Play vs Trinky' button
   </div>
 </div>
+
 
 <form id="playerForm">
   <div class="input-section">
@@ -242,10 +253,10 @@ body {
       🌟 둘이서 하기 / 2 Player Mode
     </button>
     <button type="button" class="mode-button" onclick="location.href='T2.html'">
-      🤖 트링키와 하기 / Play with Trinky
+      🤖 트링키와 하기 / Play vs Trinky
     </button>
       <button type="button" class="mode-button" onclick="location.href='T3.html'">
-      🤖 졸린 트링키와 하기 / Play with Sleepy Trinky
+      🌙 졸린 트링키와 하기 / Play with Sleepy Trinky
     </button>
   
   </div>
@@ -295,7 +306,7 @@ body {
 * 개발 보조 : 챗GPT<br/>
 * 코딩 도움 : 클라우드<br/>
 * 디자인 도움: 네이처 리<br/>
-ⓒ 2025 한수수. 이 게임의 모든 권리는 제작자인 한수수에게 있습니다. 무단 복제, 배포, 2차 창작을 금합니다.<br/>
+ⓒ 2025 한수수. 이 게임의 모든 권리는 제작자인 한수수에게 있습니다.<br/> 무단 복제, 배포, 2차 창작을 금합니다.<br/>
 * Created and Developed by Soosoo Han<br/>
 * Development Assistant: ChatGPT<br/>
 * Coding Support: Cloud<br/>
