--- a/T2.html
+++ b/T2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trinkle</title>
+  <title>Trinkle vs trinky</title>
   <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 * {
@@ -211,7 +211,7 @@ width: 100vw;
         const areaRect = gameArea.getBoundingClientRect();
         const minDistance = Math.min(areaRect.width, areaRect.height) * 0.25;
         const margin = 60;
-        const pointCount = 10; // 9개에서 10개로 변경
+        const pointCount = 10; // 점의 수
 
         // 금지 구역 정의
         const forbiddenZones = [
