--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <!-- 메인 페이지 -->
         <div id="main-page" class="page active">
             <div class="header">
-                <h1>🎮 게임 허브</h1>
+                <h1>🎮 TRINKLE</h1>
                 <p>원하는 메뉴를 선택하세요</p>
             </div>
 
