--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     <input type="text" id="player2" class="name-input" placeholder="이름 / Name" maxlength="15" />
   </div>
 </form><br>
-<button class="main-game-button" onclick="startTwoPlayerGame()" style="margin-top: 130px;">
+<button class="main-game-button" onclick="location.href='T1.html'" style="margin-top: 130px;">
       🖍️  둘이서 하기 / 2 Player Mode
     </button>
        <button class="main-game-button" onclick="location.href='T2.html'">
