--- a/index.html
+++ b/index.html
@@ -416,13 +416,13 @@
     <input type="text" id="player2" class="name-input" placeholder="이름 / Name" maxlength="15" />
   </div>
 </form><br>
-<button class="main-game-button" onclick="location.href='T1.html'" style="margin-top: 130px;">
+<button class="mode-button" onclick="location.href='T1.html'" style="margin-top: 130px;">
       🖍️  둘이서 하기 / 2 Player Mode
     </button>
-       <button class="main-game-button" onclick="location.href='T2.html'">
+       <button class="mode-button" onclick="location.href='T2.html'">
       🤖 트링키와 하기 / Play with Trinky
     </button>
-       <button class="main-game-button" onclick="location.href='T3.html'">
+       <button class="mode-button" onclick="location.href='T3.html'">
       🌙 졸린 트링키와 하기 / Play with sleepy Trinky
     </button>
       
