--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         cursor: pointer;
         transition: all 0.3s ease;
         font-family: 'Gowun Batang', serif;
+        margin-bottom: 15px;  
     }
 
     .mode-button:hover {
