--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <!-- 메인 페이지 -->
         <div id="main-page" class="page active">
             <div class="header">
-                <h1>🎮 TRINKLE</h1>
+                <h1> TRINKLE</h1>
                 <p>원하는 메뉴를 선택하세요</p>
             </div>
 
@@ -310,13 +310,13 @@
             </button>
             
             <button class="nav-btn" onclick="showPage('games-page')">
-                <span class="icon">🎯</span>
-                게임 플레이
+                <span class="icon">🎮</span>
+                게임시작 /Game start
             </button>
             
             <button class="nav-btn" onclick="showPage('my-games-page')">
                 <span class="icon">🏆</span>
-                수수의 다른 게임
+                수수의 다른 게임 /soosoo's Games
             </button>
         </div>
 
